# cre_stress_test

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
R/: README.md  forecast_stress_scenarios.R
data/processed/: boston_mobility.csv  macro.csv  mobility.csv  zoning.csv
docs/: data_dictionary.md  methodology.md  model_card.md
notebooks/: 01_exploratory.ipynb
reports/: cre_credit_risk_pipeline.html  index.html
scripts/: 01_ingest.py  02_persist.py  03_train.py  04_evaluate.py  05_commentary.py
sql/: README.md  schema.sql
src/cre_stress/: __init__.py  commentary.py  config.py  evaluate.py  features.py  ingest.py  models.py  persist.py  pipeline.py
src/dashboard/: app.py
tests/: conftest.py  test_config.py  test_features.py  test_models.py  test_persist.py
