[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cre-stress-test"
version = "0.2.0"
description = "Production-style CRE credit risk modeling pipeline (FRED + Mobility + Zoning → SQLite → ML classifier with SHAP)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Yullie Yang", email = "yullieyang@gmail.com" }]
keywords = [
    "credit-risk",
    "commercial-real-estate",
    "stress-testing",
    "machine-learning",
    "fred",
    "shap",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.31",
    "scikit-learn>=1.3",
    "imbalanced-learn>=0.11",
    "shap>=0.43",
    "matplotlib>=3.7",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.28", "plotly>=5.17"]
commentary = ["anthropic>=0.39"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.7",
]
all = ["cre-stress-test[dashboard,commentary,dev]"]

[project.scripts]
cre-stress = "cre_stress.pipeline:main"

[project.urls]
Repository = "https://github.com/yullieyang/cre_stress_test"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
